# xivo_ros

./: CMakeLists.txt  README.md  package.xml
include/xivo/: simple_node.h
include/xivo_ros/: simple_node.h
launch/: tumvi.launch  tumvi.xml  xivo.launch  xivo.xml
msg/: FullState.msg
src/: main.cpp  simple_node.cpp
